# DeepSDF

./: .gitignore  .gitmodules  1024-log.out  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  append_data.py  err-2.out  evaluate.py  generate_training_meshes.py  plot_log.py  preprocess_data.py  process_whole_dataset.sh  reconstruct.py  show_interior_samples.py  slurm-7206595.out  train_deep_sdf.py  train_deep_sdf_relu.py  training-err.out  workspace.py
deep_sdf/: __init__.py  data.py  mesh.py  utils.py  workspace.py
deep_sdf/metrics/: chamfer.py
docker/: BUILD-DOCKER-IMAGE.sh  Dockerfile  RUN-DOCKER-CONTAINER.sh  initialize_docker_container.sh
examples/chairs/: specs.json
examples/chairs/LatentCodes/: 100.pth  1000.pth  2000.pth  500.pth  latest.pth
examples/div-pi-0.01/: Logs.pth
examples/div-pi-0.01/LatentCodes/: 100.pth  1000.pth  500.pth  latest.pth
examples/div-pi-1024/: Logs.pth  specs.json
examples/div-pi-1024/LatentCodes/: 100.pth  1000.pth  500.pth  latest.pth
examples/div-pi-stripped/: Logs.pth  specs.json
examples/div-pi-stripped/LatentCodes/: 100.pth  1000.pth  500.pth  latest.pth
examples/lamps/: specs.json
examples/layouts/: Logs.pth  specs.json
examples/layouts/LatentCodes/: 100.pth  400.pth  500.pth  800.pth  latest.pth
examples/overfit/: Logs.pth  specs.json
examples/overfit-cos/: Logs.pth  specs.json
examples/overfit-cos/LatentCodes/: 100.pth  1000.pth  500.pth  latest.pth
examples/overfit-direction/: Logs.pth  specs.json
examples/overfit-direction/LatentCodes/: 100.pth  1000.pth  500.pth  latest.pth
examples/overfit-div-pi/: Logs.pth  specs.json
examples/overfit-div-pi/LatentCodes/: 100.pth  (+3 more)
examples/overfit-mul-pi/: Logs.pth
examples/overfit-revamp/: specs.json
examples/planes/: specs.json
examples/relu/: Logs.pth  specs.json
examples/sofas/: specs.json
examples/splits/: stripped_test.json  sv2_chairs_test.json  sv2_chairs_train.json  sv2_lamps_test.json  sv2_lamps_train.json  sv2_planes_test.json  sv2_planes_train.json  sv2_sofas_test.json  sv2_sofas_train.json  sv2_tables_test.json  sv2_tables_train.json  vec_test_test.json  vec_test_train.json
examples/tables/: specs.json
examples/test/: Logs.pth  specs.json
networks/: deep_sdf_decoder.py  deep_sdf_decoder_relu.py
src/: PreprocessMesh.cpp  PreprocessMesh_0516.cpp  SampleVisibleMeshSurface.cpp  ShaderProgram.cpp  Utils.cpp  Utils.h
(+24 files in other folders)
